TEST-2 Design: light-button 철자 오류 수정

--- a/templates/domestic/credit_list.html
+++ b/templates/domestic/credit_list.html
@@ -20,7 +20,7 @@
                     <input class="credit-search" name="q" value="{{q}}" autocomplete="off">
                     <button class="credit-button" type="submit"><ion-icon name="search"></ion-icon></button>
                 </form>
-                <button class="ligth-button create-btn md-btn" onclick="canIpost('{{ is_authenticated }}','{{ is_enrolled }}')" style="margin-left: 15px;"> 등록하기 </button>
+                <button class="light-button create-btn md-btn" onclick="canIpost('{{ is_authenticated }}','{{ is_enrolled }}')" style="margin-left: 15px;"> 등록하기 </button>
             </div>
         </div>
         <hr>
