TEST-132 Design: pagination margin-top 통일

--- a/templates/foreign/question_list.html
+++ b/templates/foreign/question_list.html
@@ -36,7 +36,7 @@
             <h6>첫 번째로 정보를 등록해주세요!</h6>
         </div>
         {% endif %}
-        <div class="pagination qna-pagination d-flex justify-content-center">
+        <div class="pagination d-flex justify-content-center">
             <div>
                 {% if page_obj.has_previous %}
                     <a class="abutton" href="?page={{ bpage_obj.previous_page_number }}"><i class="fas fa-chevron-left"></i></a>
