--- a/static/css/pages/credit.css
+++ b/static/css/pages/credit.css
@@ -24,8 +24,8 @@
   border: none;
   height: 28px;
   font-size: 12px;
-  position: absolute;
-  margin-right: 200px;
+  position: relative;
+  margin-right: -78px;
   width: 69px;
   padding: 0;
   border-radius: 20px;
@@ -36,13 +36,13 @@
 }
 
 .credit-button {
-  width: 14px;
-  height: 14px;
+  width: 20px;
+  height: 20px;
   border: none;
   background-color: transparent;
-  position: absolute;
+  position: relative;
   margin-top: 5px;
-  margin-left: 235px;
+  margin-left: -32px;
 }
 
 .credit-list th {
