--- a/templates/country/country_base.html
+++ b/templates/country/country_base.html
@@ -5,16 +5,22 @@
 {% block content %}
     
     <div class="d-flex">
-        <div class="m-5 border border-dark rounded d-flex flex-column justify-content-center"
-            style="width:200px; height:150px;">
-            <ul>
-                <li><a href="{% url "country:country_wiki" country.pk%}">위키</a></li>
-                <li><a href="{% url "country:question_list" country.pk%}">QnA</a></li>
-                <li><a href="{% url "country:country_univ" country.pk%}">학교 목록</a></li>
-            </ul>
+        <div class="sidebar">
+            <div class="sidebar__text">
+                <h3><a href="{% url 'country:country_univ' country.pk %}">학교 목록</a></h3>
+                <h3 class="sidebar__selected"><a href="{% url 'country:country_wiki' country.pk %}">위키</a></h3>
+                    <h4><a href="#">비자 발급 방법</a></h4>
+                    <h4><a href="#">현지 생활 및 치안</a></h4>
+                    <h4><a href="#">물가 및 체류 비용</a></h4>
+                    <h4><a href="#">문화적 특징</a></h4>
+                    <h4><a href="#">코로나 정보</a></h4>
+                <h3><a href="{% url 'country:question_list' country.pk %}">QnA</a></h3>
+            </div>
         </div>
-        {% block contents %}
-        {% endblock %}
+        <div class="contents">
+            {% block contents %}
+            {% endblock %}
+        </div>
     </div>
 
 {% endblock %}
