--- a/templates/domestic/wiki.html
+++ b/templates/domestic/wiki.html
@@ -44,6 +44,7 @@
                 <pre>{{ domestic.insurance }}</pre>
             </div>
         </div>
+    </div>
 {% endblock %}
 {% block extra %}
 <script>
