--- a/templates/login/success_email.html
+++ b/templates/login/success_email.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="container login">
+<div class="container login" style="height: 800px;">
     <h3>학교 인증</h3>
     <br />
     <hr />
