--- a/static/css/components/header.css
+++ b/static/css/components/header.css
@@ -1,6 +1,8 @@
 header {
   background-color: var(--blue);
-  position: relative;
+  position: sticky;
+  top: 0;
+  z-index: 2;
 }
 .header {
   height: 60px;
