--- a/static/css/components/post_list.css
+++ b/static/css/components/post_list.css
@@ -6,6 +6,7 @@
   padding: 9px 0px 9px 12px;
   outline: none;
   margin-left: 10px;
+  font-size: 14px;
 }
 
 .search-button {
@@ -48,12 +49,12 @@
 }
 
 .post-list .numbering {
-  font-size: 17px;
+  font-size: 12px;
   border-radius: 14px;
   background-color: var(--l-gray);
   width: 22px;
   height: 22px;
-  padding: 0 8px;
+  padding: 2px 7px;
   margin: 0 3px;
   text-decoration: none;
   color: var(--d-gray);
