--- a/static/css/pages/review_list.css
+++ b/static/css/pages/review_list.css
@@ -17,12 +17,12 @@
 }
 
 .review-list .numbering {
-  font-size: 17px;
+  font-size: 12px;
   border-radius: 14px;
   background-color: var(--l-gray);
   width: 22px;
   height: 22px;
-  padding: 0 8px;
+  padding: 2px 7px;
   margin: 0 3px;
   text-decoration: none;
   color: var(--d-gray);
