TEST-8 Style: 메인페이지 김경린 소개 변경

--- a/templates/login/main.html
+++ b/templates/login/main.html
@@ -39,10 +39,10 @@
         <div class="profile-card pc-space d-flex align-items-center">
             <img class="p-img" src="/static/css/img/profile_img_2.png" alt="민지프로필">
             <div class="p-text">
-                <p class="p-position">엇 잠시만..</p>
+                <p class="p-position">비둘기</p>
                 <p class="p-name">김경린</p>
                 <div class="p-border"></div>
-                <p class="p-content">유니커넥트에서 '엇..잠시만..'를 맡고 있습니다 😁<br>
+                <p class="p-content">유니커넥트 김경린입니다😁<br>
                     뚝딱뚝딱하다 보니 이렇게 멋지게 완성되었네요.</p>
             </div>
         </div>
