--- a/templates/foreign/review_create.html
+++ b/templates/foreign/review_create.html
@@ -1,7 +1,7 @@
 {%extends "foreign/foreign_base.html"%}
 {%block contents%}
 {% if type == 'create' or IsReviewAuthor == True %}
-<div class="container2 category-detail">
+<div class="container2 category-detail review-create">
     <div class="d-flex justify-content-between align-items-end">
         <div class="d-flex align-items-end">
             <h3>{{univ.away_name}}</h3>
