--- a/templates/foreign/foreign_base.html
+++ b/templates/foreign/foreign_base.html
@@ -26,7 +26,7 @@
         </div>
     </div>
 
-    <script src="http://code.jquery.com/jquery-latest.js"></script>
+    <script src="https://code.jquery.com/jquery-latest.js"></script>
     <script>
         var url = window.location.pathname;
         $('.sidebar__text').find('a').each(function() {
