TEST-135 Fix: 이미 등록된 해외대학 거르기

--- a/templates/foreign/univ_search.html
+++ b/templates/foreign/univ_search.html
@@ -172,4 +172,9 @@
         }
     } ;
 </script>
+{% if message %}
+    <script>
+        alert("{{message}}")
+    </script>
+{% endif %}
 {%endblock%}
