--- a/templates/domestic/univ_list.html
+++ b/templates/domestic/univ_list.html
@@ -58,14 +58,14 @@ list();
         for(i=0;i<topKey.length;i++){
             topKey[i].className="list-unactive"    /*초기화*/
             var element = topKey[i].innerHTML;
-            var midKey = document.querySelector(`#${element}_list`)
-                midKey.className = "lalpha"
+            var midKey = document.querySelector(`#${element}_list`);
+                midKey.className = "lalpha";
             if(key == topKey[i].innerHTML){
-                topKey[i].className="list-active"
-                midKey = document.querySelector(`#${key}_list`)
-                midKey.className = "lalpha-active"
-            }
-        }
-    }
+                topKey[i].className="list-active";
+                midKey = document.querySelector(`#${key}_list`);
+                midKey.className = "lalpha-active";
+            };
+        };
+    };
     </script>
 {% endblock %}
