--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,4 @@
-
+{% load static %}
 <!DOCTYPE html>
 <html lang="ko">
 <head>
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UniConnect</title>
+    <link rel="shortcut icon" size="16X16" href="{% static 'css/img/favicon.svg' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
     {% block style %}
     {% endblock %}
