--- a/templates/country/question_detail.html
+++ b/templates/country/question_detail.html
@@ -12,10 +12,10 @@
             <span class="post-title">{{ question.question_title }}</span>
             <div class="d-flex justify-content-end">
                 {% if question.author.pk == user.pk %}
-                <button class="light-button create-btn m-btn " onclick="location.href='{% url "country:question_edit" country.pk question.pk %}'"> 수정 </button>
+                <button class="light-button m-btn " onclick="location.href='{% url "country:question_edit" country.pk question.pk %}'"> 수정 </button>
                 <form action="{% url 'country:question_delete' country.pk question.pk %}" method="post" >
                     {% csrf_token %}
-                    <button class="light-button create-btn m-btn post-button" onclick="return confirm('정말 삭제하시겠습니까?')" type="submit" >삭제</button>
+                    <button class="light-button m-btn post-button" onclick="return confirm('정말 삭제하시겠습니까?')" type="submit" >삭제</button>
                 </form>
                 {% endif %}
             </div>
@@ -37,11 +37,11 @@
                     </div>
                     <div>
                         {% if request.user == comment.comment_author %}
-                        <button class="light-button create-btn s-btn update " onclick="EditComment('{{ comment.id }}' ,'{{ comment.comment_content }}')">수정</button>
-                        <button class="light-button create-btn s-btn post-button delete " onclick="onClickDelete('{{ comment.id }}' )">삭제</button>
+                        <button class="light-button s-btn update " onclick="EditComment('{{ comment.id }}' ,'{{ comment.comment_content }}')">수정</button>
+                        <button class="light-button s-btn post-button delete " onclick="onClickDelete('{{ comment.id }}' )">삭제</button>
                         {% endif %}
                         {% if is_authenticated == True %}
-                        <button class="light-button create-btn s-btn post-button" id='undercomment' onclick="undercommentPlus('{{ comment.id }}')">댓글</button><br/>
+                        <button class="light-button s-btn post-button" id='undercomment' onclick="undercommentPlus('{{ comment.id }}')">댓글</button><br/>
                         {% endif %}
                     </div>
                 </div>
@@ -59,8 +59,8 @@
                             </div>
                             {% if undercomment.comment_author == request.user %}
                             <div>
-                                <button class="light-button create-btn s-btn" onclick="editUnderComment('{{ comment.pk }}', '{{ undercomment.pk }}','{{ undercomment.comment_content }}')">수정</button>
-                                <button class="light-button create-btn s-btn post-button" onclick="onClickDeleteUnder('{{ undercomment.pk }}')">삭제</button>
+                                <button class="light-button s-btn" onclick="editUnderComment('{{ comment.pk }}', '{{ undercomment.pk }}','{{ undercomment.comment_content }}')">수정</button>
+                                <button class="light-button s-btn post-button" onclick="onClickDeleteUnder('{{ undercomment.pk }}')">삭제</button>
                             </div>
                             {% endif %}
                         </div>
@@ -74,7 +74,7 @@
         {% if is_authenticated == True %}
         <div class="new-comment d-flex align-items-center">
             <input class="new-comment-input flex-grow-1" type="text" name="comment_content" id="comment_{{ question.pk }}" placeholder='댓글달기...' style="width: 80%;"/>
-            <button class="blue-button create-btn s-btn post-button submit" onclick="onClickComment('{{ user.is_authenticated }}', '{{ question.pk }}', document.querySelector('#comment_{{ question.pk }}').value )">등록</button>
+            <button class="blue-button s-btn post-button submit" onclick="onClickComment('{{ user.is_authenticated }}', '{{ question.pk }}', document.querySelector('#comment_{{ question.pk }}').value )">등록</button>
         </div>
         {% endif %}
     </div>
@@ -113,9 +113,9 @@
                     <span class="comment-date">{{ now |date:"Y.m.d" }} </span>
                 </div>
                 <div>
-                    <button class="light-button create-btn s-btn update " onclick="EditComment('${comment_id}', '${comment_content}')">수정</button>
-                    <button class="light-button create-btn s-btn delete post-button" onclick="onClickDelete('${comment_id}')">삭제</button>
-                    <button class="light-button create-btn s-btn post-button" id='undercomment' onclick="undercommentPlus('${comment_id}')">댓글</button><br/>
+                    <button class="light-button s-btn update " onclick="EditComment('${comment_id}', '${comment_content}')">수정</button>
+                    <button class="light-button s-btn delete post-button" onclick="onClickDelete('${comment_id}')">삭제</button>
+                    <button class="light-button s-btn post-button" id='undercomment' onclick="undercommentPlus('${comment_id}')">댓글</button><br/>
                 </div>
             </div>
             <p class="comment-content">${comment_content}</p>
@@ -136,7 +136,7 @@
                     <span class="post-author">{{request.user.nickname}}</span>
                     <span class="comment-date">{{ now|date:"Y.m.d" }} </span>
                 </div>
-                <button class="blue-button create-btn s-btn post-button" onclick="onClickUpdate('${comment_id}', document.querySelector('#edit_comment').value)">저장</button>
+                <button class="blue-button s-btn post-button" onclick="onClickUpdate('${comment_id}', document.querySelector('#edit_comment').value)">저장</button>
             </div>
             <input class="edit-comment-input" type="text" id="edit_comment" value='${comment_content}' />
             `;
@@ -167,9 +167,9 @@
                 <span class="comment-date">{{ now|date:"Y.m.d" }} </span>
             </div>
             <div>
-                <button class="light-button create-btn s-btn update " onclick="EditComment(${comment_id} ,'${comment_content}')">수정</button>
-                <button class="light-button create-btn s-btn post-button delete " onclick="onClickDelete(${comment_id} )">삭제</button>
-                <button class="light-button create-btn s-btn post-button" id='undercomment' onclick="undercommentPlus('${comment_id}')">댓글</button><br/>
+                <button class="light-button s-btn update " onclick="EditComment(${comment_id} ,'${comment_content}')">수정</button>
+                <button class="light-button s-btn post-button delete " onclick="onClickDelete(${comment_id} )">삭제</button>
+                <button class="light-button s-btn post-button" id='undercomment' onclick="undercommentPlus('${comment_id}')">댓글</button><br/>
             </div>
         </div>
         <p class="comment-content">${comment_content}</p>
@@ -213,7 +213,7 @@
             <img src="/static/css/img/undercomment.png" alt="대댓글">
             <span class="post-author">{{ request.user.nickname }}</span>
             <input class="new-undercomment-input flex-grow-1" type="text" id="new-undercomment" placeholder="댓글 달기..."/>
-            <button class="blue-button create-btn s-btn post-button" onclick="onClickUnderComment('{{ is_authenticated }}', ${comment_id}, document.querySelector('#new-undercomment').value)">등록</button>
+            <button class="blue-button s-btn post-button" onclick="onClickUnderComment('{{ is_authenticated }}', ${comment_id}, document.querySelector('#new-undercomment').value)">등록</button>
         </div>
             `;
     };
@@ -243,8 +243,8 @@
                         <p class="comment-content">${undercomment_content}</p>
                     </div>
                     <div>
-                        <button class="light-button create-btn s-btn" onclick="editUnderComment('${comment_id}', '${undercomment_id}','${undercomment_content}')">수정</button>
-                        <button class="light-button create-btn s-btn post-button" onclick="onClickDeleteUnder('${undercomment_id}')">삭제</button>
+                        <button class="light-button s-btn" onclick="editUnderComment('${comment_id}', '${undercomment_id}','${undercomment_content}')">수정</button>
+                        <button class="light-button s-btn post-button" onclick="onClickDeleteUnder('${undercomment_id}')">삭제</button>
                     </div>
                 </div>
             </div>
@@ -262,9 +262,9 @@
             <img src="/static/css/img/undercomment.png" alt="대댓글">
             <span class="post-author">{{ request.user.nickname }}</span>
             <input class="new-undercomment-input flex-grow-1" type="text" id="edit-undercomment" value='${undercomment_content}' />
-            <button class="blue-button create-btn s-btn post-button" onclick="onClickEditUnder('${comment_id}', '${undercomment_id}', document.querySelector('#edit-undercomment').value)">저장</button>
+            <button class="blue-button s-btn post-button" onclick="onClickEditUnder('${comment_id}', '${undercomment_id}', document.querySelector('#edit-undercomment').value)">저장</button>
         </div>
-        `
+        `;
     };
 
     const onClickEditUnder= async(comment_id, undercomment_id, comment_content) => {  
@@ -288,8 +288,8 @@
                     <p class="comment-content">${undercomment_content}</p>
                 </div>
                 <div>
-                    <button class="light-button create-btn s-btn" onclick="editUnderComment('${comment_id}', '${undercomment_id}','${undercomment_content}')">수정</button>
-                    <button class="light-button create-btn s-btn post-button" onclick="onClickDeleteUnder('${undercomment_id}')">삭제</button>
+                    <button class="light-button s-btn" onclick="editUnderComment('${comment_id}', '${undercomment_id}','${undercomment_content}')">수정</button>
+                    <button class="light-button s-btn post-button" onclick="onClickDeleteUnder('${undercomment_id}')">삭제</button>
                 </div>
             </div>
         `
