--- a/templates/foreign/review_detail.html
+++ b/templates/foreign/review_detail.html
@@ -17,10 +17,10 @@
             </div>
             <div>
                 {% if IsReviewAuthor %}
-                <button class="light-button create-btn ra_btn" onclick="location.href='{% url "foreign:review_update" univ.pk review.pk%}' ">수정</button>
+                <button class="light-button ra_btn" onclick="location.href='{% url "foreign:review_update" univ.pk review.pk%}' ">수정</button>
                     <form action="{% url "foreign:review_delete" univ.pk review.pk %}" method="post" class="ReviewDeleteForm" style="  display: inline; background: transparent">
                         {% csrf_token %}
-                        <button class="light-button create-btn " onclick="return confirm('정말 삭제하시겠습니까?')" type="submit" >삭제</button>
+                        <button class="light-button " onclick="return confirm('정말 삭제하시겠습니까?')" type="submit" >삭제</button>
                     </form>
                 {% endif %}
             </div>
@@ -65,15 +65,15 @@
                         </div>
                         {% if recomment.comment_author == request.user %}
                         <div>
-                            <button class="light-button  s-btn update" onclick="editReComment('{{ comment.pk }}', '{{ recomment.pk }}','{{ recomment.comment_content }}')">수정</button>
-                            <button class="light-button  s-btn post-button delete" onclick="onClickDeleteUnder('{{ recomment.pk }}')">삭제</button>
+                            <button class="light-button s-btn update" onclick="editReComment('{{ comment.pk }}', '{{ recomment.pk }}','{{ recomment.comment_content }}')">수정</button>
+                            <button class="light-button s-btn post-button delete" onclick="onClickDeleteUnder('{{ recomment.pk }}')">삭제</button>
                         </div>
                         {% endif %}
                     </div>
                     {% endif %}
                 {% endfor %}
             </div>
-            <div class="d-flex align-items-center  recomment_{{ comment.pk }}"></div>
+            <div class="d-flex align-items-center recomment_{{ comment.pk }}"></div>
         </div>
         {%endfor%}
         {%endif%}
@@ -82,7 +82,7 @@
     <div class="d-flex justify-content-between align-items-end">
         {% csrf_token %}
         <input class="new-comment-input flex-grow-1" type="text" name="comment_content" id="comment_{{review.id}}" placeholder='답변 달기...' style="width: 80%;"/>
-        <div class="blue-button create-btn s-btn post-button submit" type="submit" class="blue-button create-btn s-btn post-button submit" onclick="onClickComment('{{user.is_authenticated}}',{{review.id}}, document.querySelector('#comment_{{review.id}}').value)">등록</div>
+        <div class="blue-button s-btn post-button submit" type="submit" class="blue-button s-btn post-button submit" onclick="onClickComment('{{user.is_authenticated}}',{{review.id}}, document.querySelector('#comment_{{review.id}}').value)">등록</div>
         <!-- 이유는 모르겠으나 위의 버튼이 div,span가 아닌 button,input이면 오류가 남,,, -->
     </div>
 </div>
@@ -146,7 +146,7 @@
                     <span class="post-author">{{request.user.nickname}}</span>
                     <span class="comment-date">{{ now|date:"Y.m.d" }} </span>
                 </div>
-                <button class="blue-button create-btn s-btn post-button" onclick="onClickUpdate('${comment_id}', document.querySelector('#edit_comment').value)">저장</button>
+                <button class="blue-button s-btn post-button" onclick="onClickUpdate('${comment_id}', document.querySelector('#edit_comment').value)">저장</button>
             </div>
             <input type="text" class="edit-comment-input" id="edit_comment" value=${comment_content} />
             `
@@ -178,9 +178,9 @@
                 <span class="comment-date">{{ now|date:"Y.m.d" }} </span>
             </div>
             <div>
-                <button class="light-button  s-btn update " onclick="EditComment(${comment_id} ,'${comment_content}')">수정</button>
-                <button class="light-button  s-btn post-button delete " onclick="onClickDelete(${comment_id} )">삭제</button>
-                <button class="light-button  s-btn post-button" id='recomment' onclick="recommentPlus('${comment_id}')">댓글</button><br/>
+                <button class="light-button s-btn update " onclick="EditComment(${comment_id} ,'${comment_content}')">수정</button>
+                <button class="light-button s-btn post-button delete " onclick="onClickDelete(${comment_id} )">삭제</button>
+                <button class="light-button s-btn post-button" id='recomment' onclick="recommentPlus('${comment_id}')">댓글</button><br/>
                 
             </div>
         </div>
@@ -226,7 +226,7 @@
             <img src="/static/css/img/undercomment.png" style="margin-right:10px;" alt="대댓글">
             <span class="post-author">{{ request.user.nickname }}</span>
             <input class="new-undercomment-input flex-grow-1" type="text" id="new-recomment" placeholder="댓글 달기..." class="w-75"/>
-            <button class="blue-button create-btn s-btn post-button" onclick="onClickUnderComment('{{is_authenticated}}', ${comment_id}, document.querySelector('#new-recomment').value)">등록</button>
+            <button class="blue-button s-btn post-button" onclick="onClickUnderComment('{{is_authenticated}}', ${comment_id}, document.querySelector('#new-recomment').value)">등록</button>
         `
         element.appendChild(RecommentInput);
         }
@@ -273,7 +273,7 @@
             <img src="/static/css/img/undercomment.png" alt="대댓글">
             <span class="post-author">{{ request.user.nickname }}</span>
             <input class="new-undercomment-input flex-grow-1 " type="text" id="edit-undercomment" value='${recomment_content}' />
-            <button class="blue-button create-btn s-btn post-button" onclick="onClickEditUnder('${comment_id}', '${recomment_id}', document.querySelector('#edit-undercomment').value)">저장</button>
+            <button class="blue-button s-btn post-button" onclick="onClickEditUnder('${comment_id}', '${recomment_id}', document.querySelector('#edit-undercomment').value)">저장</button>
         </div>
         `
     }
