TEST-139 Design: 국내 대학 자매결연 추가 검색 방식으로
css 적용이 안돼서 확인을 제대로 못 한 상태. 중간 커밋

--- a/static/css/pages/sister_search.css
+++ b/static/css/pages/sister_search.css
@@ -1,12 +1,15 @@
 .title-search-foreign {
   display: inline;
   color: var(--m-gray);
+  margin-right: 32px;
 }
 
 .search-sister {
+  border: none;
   border-radius: 10px;
   padding-left: 15px;
   color: var(--d-gray);
+  width: 100%;
 }
 
 .title-search-foreign,
