TEST-139 Docs: style.css에 autocomplete.css import

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -15,6 +15,8 @@
 @import "components/comment.css";
 @import "components/undercomment.css";
 @import "components/sidebar.css";
+@import "components/autocomplete.css";
+
 /* Pages */
 @import "pages/main.css";
 @import "pages/list.css";
