TEST-139 Docs: style.css에 sister_seach.css import

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -31,6 +31,7 @@
 @import "pages/myquestion.css";
 @import "pages/credit.css";
 @import "pages/wiki.css";
+@import "pages/sister_search.css";
 
 body {
   font-family: "Noto Sans KR", sans-serif;
