Feat, Remove: 광고 script 코드 추가, 불필요 파일 삭제

--- a/templates/country/country_univ.html
+++ b/templates/country/country_univ.html
@@ -33,3 +33,7 @@
 </div>
 
 {%endblock%}
+{% block extra %}
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2153488758273914"
+     crossorigin="anonymous"></script>
+     {%endblock%}
