--- a/templates/login/certificate.html
+++ b/templates/login/certificate.html
@@ -60,4 +60,6 @@
         <script>alert("{{ domain_error }}")</script>
     {% endif %}
 </script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2153488758273914"
+    crossorigin="anonymous"></script>
 {% endblock %}
