--- a/templates/login/mypage.html
+++ b/templates/login/mypage.html
@@ -124,4 +124,6 @@
     {% if message %}
     <script>alert('{{ message }}')</script>  
     {% endif %}
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2153488758273914"
+    crossorigin="anonymous"></script>
 {% endblock %}
