--- a/templates/login/signup.html
+++ b/templates/login/signup.html
@@ -58,4 +58,6 @@
     {% if error %}
         <script>alert('{{ error }}')</script>
     {% endif %}
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2153488758273914"
+    crossorigin="anonymous"></script>
 {% endblock %}
