--- a/templates/country/country_wiki.html
+++ b/templates/country/country_wiki.html
@@ -63,4 +63,6 @@
         }
     }
 </script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2153488758273914"
+     crossorigin="anonymous"></script>
 {% endblock %}
