--- a/templates/country/question_detail.html
+++ b/templates/country/question_detail.html
@@ -313,4 +313,6 @@
         element.remove();
     };
 </script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2153488758273914"
+     crossorigin="anonymous"></script>
 {% endblock %}
