--- a/templates/country/question_search.html
+++ b/templates/country/question_search.html
@@ -88,5 +88,6 @@
         };
     
     </script>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2153488758273914"
+crossorigin="anonymous"></script>
 {% endblock %}
