--- a/templates/country/wiki_edit.html
+++ b/templates/country/wiki_edit.html
@@ -42,4 +42,6 @@
         window.location.href='{% url "country:country_wiki" country.pk%}';
     };
     </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2153488758273914"
+    crossorigin="anonymous"></script>
 {% endblock %}
