--- a/templates/domestic/sister_add.html
+++ b/templates/domestic/sister_add.html
@@ -103,4 +103,6 @@
     }
     autocomplete(document.getElementById("myInput"), univs);
 </script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2153488758273914"
+     crossorigin="anonymous"></script>
 {% endblock %}
