--- a/templates/domestic/univ_list.html
+++ b/templates/domestic/univ_list.html
@@ -68,4 +68,6 @@ list();
         };
     };
     </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2153488758273914"
+    crossorigin="anonymous"></script>
 {% endblock %}
