--- a/templates/foreign/create_sister.html
+++ b/templates/foreign/create_sister.html
@@ -24,4 +24,6 @@
     </div>
 
 </div>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2153488758273914"
+     crossorigin="anonymous"></script>
 {% endblock %}
