--- a/templates/foreign/question_form.html
+++ b/templates/foreign/question_form.html
@@ -22,5 +22,6 @@
             window.location.href='{% url "foreign:question_list" univ.pk  %}';
     </script>
 {%endif%}
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2153488758273914"
+     crossorigin="anonymous"></script>
 {% endblock %}
