--- a/templates/foreign/univ_list.html
+++ b/templates/foreign/univ_list.html
@@ -71,4 +71,6 @@ const clickAlpha = (key)=>{
     }
 }
 </script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2153488758273914"
+     crossorigin="anonymous"></script>
 {%endblock%}
