--- a/templates/foreign/wiki_edit.html
+++ b/templates/foreign/wiki_edit.html
@@ -47,4 +47,6 @@
     };
     
 </script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2153488758273914"
+     crossorigin="anonymous"></script>
 {% endblock %}
