--- a/templates/login/myquestion.html
+++ b/templates/login/myquestion.html
@@ -230,4 +230,6 @@
     }
     numbering3(0);
 </script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2153488758273914"
+    crossorigin="anonymous"></script>
 {% endblock %}
