--- a/templates/login/send_email.html
+++ b/templates/login/send_email.html
@@ -8,3 +8,7 @@
     <p class="sending-mail">메일을 전송하였습니다. 메일함을 확인해주세요.</p>
 </div>
 {% endblock %}
+{% block extra %}
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2153488758273914"
+    crossorigin="anonymous"></script>
+    {% endblock %}
